# 123-lab-machine-learning

./: .gitignore  README.md  model_lr.pkl  pyproject.toml  test.json  test.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
1_Regression_Model/: README.md  main.py  regression_model.ipynb
