[project]
name = "123lab-machine-learning"
version = "0.1.0"
description = "Machine Learning Lab Environment"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "ipywidgets>=8.0.0",
    "tqdm>=4.64.0",
    "pycaret>=3.0.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "ipykernel>=6.20.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.0",
]
